edited Version 07. a figure for the eperimental procedure was added with contribution of chromatin opening and nucleosome sliding

--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.bib
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.bib
@@ -30,3 +30,23 @@
 	year={2012},
 	publisher={Rockefeller Univ Press}
 }
+
+@article{adam2015imaging,
+	title={Imaging Local Deposition of Newly Synthesized Histones in UVC-Damaged Chromatin},
+	author={Adam, Salom{\'e} and Dabin, Juliette and Bai, Siau-Kun and Polo, Sophie E},
+	journal={Chromatin Protocols},
+	pages={337--347},
+	year={2015},
+	publisher={Springer}
+}
+
+@article{deem2012epigenetic,
+	title={Epigenetic regulation of genomic integrity},
+	author={Deem, Angela K and Li, Xuan and Tyler, Jessica K},
+	journal={Chromosoma},
+	volume={121},
+	number={2},
+	pages={131--151},
+	year={2012},
+	publisher={Springer}
+}
