--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -6,7 +6,22 @@
 \usepackage{color}
 \usepackage{float}
 \begin{document}	
-	\title{Simulation framework for chromatin architecture post UVC irradiation}
+	\title{Simulation framework for chromatin architecture post UV-C irradiation}
+	\subsection{The biological process}
+	
+	\subsection{The simulation domain}
+	We simulate a 3-dimensional domain in accordance with the maximal z-projection performed in experiments. The affect of the UV beam on all layers of the nucleus is considered to be similar. 
+	\subsection{The polymer model}
+	We use a cross-linked Gaussian chain of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs between adjacent monomers are assigned a minimal distance. Cross-linking are added randomly between pairs of monomers by a harmonic spring. Cross-linking measure is given by the percentage of non-nearest neighbor monomers connected of the $N$ monomers of the chain.
+	
+	
+	\subsection{UV irradiation}
+	The Uv beam is considered to generate random damages 
+	\subsubsection{Affect of UV irradiation on the polymer}
+	
+	\subsection{Polymer Post irradiation}
+	
+	\subsection{Repair stage}
 	
 	
 \end{document}
