--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -7,21 +7,26 @@
 \usepackage{float}
 \begin{document}	
 	\title{Simulation framework for chromatin architecture post UV-C irradiation}
-	\subsection{The biological process}
+	\section{The biological process}
+	
+	\section{The simulation framework}
 	
 	\subsection{The simulation domain}
-	We simulate a 3-dimensional domain in accordance with the maximal z-projection performed in experiments. The affect of the UV beam on all layers of the nucleus is considered to be similar. 
-	\subsection{The polymer model}
-	We use a cross-linked Gaussian chain of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs between adjacent monomers are assigned a minimal distance. Cross-linking are added randomly between pairs of monomers by a harmonic spring. Cross-linking measure is given by the percentage of non-nearest neighbor monomers connected of the $N$ monomers of the chain.
+	A UV beam is shot vertically thorough the nucleus and considered to affect all chromatin in its path similarly. The simulation in therefore placed in a 2-dimensional domain. This is in-line with the experimental signal values, reported as values of a maximal z-projection [REF].
 	
+	\subsection{The polymer model}
+	We use a cross-linked Gaussian chain [REF] of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a minimal length $L_0$. Cross-linking are added randomly between pairs of monomers by a harmonic spring with minimal length zero. Cross-linking measure is given by the percentage $\alpha$ of non-nearest-neighbor monomers connected of the $N$ monomers of the chain. In each realization of the simulation, a random set of non-nearest neighbor monomers is chosen for cross-linking, according to the value set for $\alpha$. The cross-linked polymer is simulated up to relaxation time, at which time the UV beam is shot.
 	
 	\subsection{UV irradiation}
-	The Uv beam is considered to generate random damages 
-	\subsubsection{Affect of UV irradiation on the polymer}
+	At the end of relaxation steps, UV beam focal point is set to the polymer's center-of-mass. The damage region (DR) is represented by a 2-dimensional fixed circular region of area $A_0$ centered at laser's focal point. For each UV dose $u$, damages caused by UV are homogeneously distributed in $A_0$ [REF] among the polymer's monomers. Damaged monomers are chosen randomly, such that the average number of damages in $A_0$ increases as $k_tu$, with $k_t$ in units of $bp/msec$. 
 	
-	\subsection{Polymer Post irradiation}
+	\subsubsection{Affect of UV irradiation on the polymer, the repair stage}	
+	To simulate crowding of repair proteins around damaged sites, a circular exclusion region is centered at the location of each damaged monomer. Exclusion region is represented by an elastic spring pushing force of radius $r_p$, originating from each damaged monomer. The elastic force applied on any monomer within the exclusion range is thus oriented outwards. In addition to the exclusion region, all cross-links from and to damaged monomers are removed.
 	
-	\subsection{Repair stage}
+	The system will evolve into a new steady configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 95\% of the damaged monomers and centered at their center-of-mass. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI is always centered at the center-of-mass of the monomers known to be damaged.
+	
+	\subsection{Post repair stage}
+	As damaged monomers are repaired the exclusion region is removed from damaged monomers. Cross-links are reintroduced gradually according to the spatial distance between monomers. The amount of cross-links re-introduces is such that the initial cross-linking percentage $\alpha$ is restored.
 	
 	
 \end{document}
