edited simulation framework

--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -12,18 +12,18 @@
 	\section{The simulation framework}
 	
 	\subsection{The simulation domain}
-	A UV beam is shot vertically thorough the nucleus and considered to affect all chromatin in its path similarly. The simulation in therefore placed in a 2-dimensional domain. This is in-line with the experimental signal values, reported as values of a maximal z-projection [REF].
+	All simulation are performed in a two-dimensional open domain. The maximal z-projection values of DNA and nucleosome signals measured in experiments [REF].Our simulation framework is constructed to describes the dynamics of the chromatin post UV-C. All dynamics takes place in the local micro-environment of the UV beam. 
 	
 	\subsection{The polymer model}
-	We use a cross-linked Gaussian chain [REF] of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a minimal length $L_0$. Cross-linking are added randomly between pairs of monomers by a harmonic spring with minimal length zero. Cross-linking measure is given by the percentage $\alpha$ of non-nearest-neighbor monomers connected of the $N$ monomers of the chain. In each realization of the simulation, a random set of non-nearest neighbor monomers is chosen for cross-linking, according to the value set for $\alpha$. The cross-linked polymer is simulated up to relaxation time, at which time the UV beam is shot.
+	We use a cross-linked Gaussian chain [REF] of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a spring constant $2k_BT/b^2$ and a minimal length $L_0$.  Cross links are represented as harmonic springs having spring constant $2k_BT/b^2$ and a minimal length zero. Cross-linking measure is given by the percentage $0\leq \alpha\leq 100$ of non-nearest-neighbor monomers connected out of the $N$ monomers of the chain. For each realization of the polymer, cross-links are added between non nearest-neighbor pairs of monomers chosen uniformly at random. The cross-linked polymer is then simulated up to its relaxation time, set to be the slowest mode of the Gaussian chain [REF], after which the UV beam is shot.
 	
 	\subsection{UV irradiation}
-	At the end of relaxation steps, UV beam focal point is set to the polymer's center-of-mass. The damage region (DR) is represented by a 2-dimensional fixed circular region of area $A_0$ centered at laser's focal point. For each UV dose $u$, damages caused by UV are homogeneously distributed in $A_0$ [REF] among the polymer's monomers. Damaged monomers are chosen randomly, such that the average number of damages in $A_0$ increases as $k_tu$, with $k_t$ in units of $bp/msec$. 
+	At the end of relaxation steps the UV beam's focal point is placed at the polymer's center-of-mass where the beam is shot. A damage region (DR) is set to be a fixed two-dimensional circular region of area $A_0$ and centered at laser's focal point. Damages to DNA are represented by labeling monomers as damaged. For each UV dose $u$, damages caused by UV are uniformly distributed  between the monomers located in $A_0$ at the time of beam shot. With increase of UV dose, we increase the probability of damages linearly as $k_tu$, with $k_t$ in units of $bp/msec$. 
 	
 	\subsubsection{Affect of UV irradiation on the polymer, the repair stage}	
-	To simulate crowding of repair proteins around damaged sites, a circular exclusion region is centered at the location of each damaged monomer. Exclusion region is represented by an elastic spring pushing force of radius $r_p$, originating from each damaged monomer. The elastic force applied on any monomer within the exclusion range is thus oriented outwards. In addition to the exclusion region, all cross-links from and to damaged monomers are removed.
+	To simulate the affect of repair proteins crowding at sites of DNA damage, a circular exclusion region is centered at each damaged monomer. The exclusion region is represented by an elastic spring pushing force of radius $r_p$, originating from each damaged monomer. The elastic force applied on any monomer within the exclusion range is thus oriented outwards. In addition to the exclusion region, all cross-links from and to damaged monomers are removed.
 	
-	The system will evolve into a new steady configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 95\% of the damaged monomers and centered at their center-of-mass. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI is always centered at the center-of-mass of the monomers known to be damaged.
+	The polymer will evolve into a new steady spatial configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 95\% of the damaged monomers and centered at their center-of-mass. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI is always centered at the center-of-mass of the monomers known to be damaged.
 	
 	\subsection{Post repair stage}
 	As damaged monomers are repaired the exclusion region is removed from damaged monomers. Cross-links are reintroduced gradually according to the spatial distance between monomers. The amount of cross-links re-introduces is such that the initial cross-linking percentage $\alpha$ is restored.
