--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -1,32 +1,34 @@
-\documentclass[12pt]{report}
+\documentclass[12pt]{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{hyperref}
 \usepackage{color}
 \usepackage{float}
 \begin{document}	
 	\title{Simulation framework for chromatin architecture post UV-C irradiation}
-	\section{The biological process}
-	
-	\section{The simulation framework}
-	
-	\subsection{The simulation domain}
-	All simulation are performed in a two-dimensional open domain. The maximal z-projection values of DNA and nucleosome signals measured in experiments [REF].Our simulation framework is constructed to describes the dynamics of the chromatin post UV-C. All dynamics takes place in the local micro-environment of the UV beam. 
+\maketitle
+\section{The simulation framework}
+	To representing the dynamics of the chromatin in the UV damage micro-environment, simulations are performed in a three-dimensional spherical domain with reflecting boundaries. Our simulation describe the dynamics of DNA and nucleosome signal loss from a circular region of interest (ROI) 15 minutes post UV-C irradiation. The experimental measurements are reported as the maximal z-projected values of GFP signals. Accordingly, simulation result will be obtained by projecting the three-dimensional polymer dynamics onto a two dimensional plane parallel to the x-y plane and passing through the center of the spherical domain. 
 	
 	\subsection{The polymer model}
-	We use a cross-linked Gaussian chain [REF] of $N$ monomers connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a spring constant $2k_BT/b^2$ and a minimal length $L_0$.  Cross links are represented as harmonic springs having spring constant $2k_BT/b^2$ and a minimal length zero. Cross-linking measure is given by the percentage $0\leq \alpha\leq 100$ of non-nearest-neighbor monomers connected out of the $N$ monomers of the chain. For each realization of the polymer, cross-links are added between non nearest-neighbor pairs of monomers chosen uniformly at random. The cross-linked polymer is then simulated up to its relaxation time, set to be the slowest mode of the Gaussian chain [REF], after which the UV beam is shot.
+	We use a cross-linked Rouse chain of $N$ monomers \cite{doi1988theory} connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a spring constant $2k_BT/b^2$ and a minimal length $L_0>0$. Cross-links are represented by connecting non nearest-neighbor (NN) monomers by a harmonic springs with a spring constant $2k_BT/b^2$ and zero minimal length. The measure of cross-linking is given by the percentage $0\leq \alpha\leq 100$ of non-NN monomers connected out of the total. For each realization of the polymer, cross-links are added between pairs of monomers chosen uniformly at random. The dynamics of the cross-linked polymer is then simulated up to its relaxation time, determined by be the slowest mode of the linear chain \cite{doi1988theory}.
 	
 	\subsection{UV irradiation}
-	At the end of relaxation steps the UV beam's focal point is placed at the polymer's center-of-mass where the beam is shot. A damage region (DR) is set to be a fixed two-dimensional circular region of area $A_0$ and centered at laser's focal point. Damages to DNA are represented by labeling monomers as damaged. For each UV dose $u$, damages caused by UV are uniformly distributed  between the monomers located in $A_0$ at the time of beam shot. With increase of UV dose, we increase the probability of damages linearly as $k_tu$, with $k_t$ in units of $bp/msec$. 
+	At the end of relaxation steps an instantaneous UV beam is shot with its focal point placed at the polymer's center-of-mass (CM). Small fluctuations of monomers are not of interest at the scale of our simulation, therefore the diffusion force acting on the polymer is stopped at this point. Damages caused by UV are restricted to be contained within a fixed two-dimensional circular region of area $A_0$ centered at laser's focal point. Damages to DNA are represented by monomers labeled as damaged. For each UV dose $u$, damages caused by UV are uniformly distributed between the monomers in $A_0$ at the time of beam shot. With increase of UV dose, we increase the probability of damages linearly as $k_tu$, with $k_t$ in units of $bp/msec$. 
 	
-	\subsubsection{Affect of UV irradiation on the polymer, the repair stage}	
-	To simulate the affect of repair proteins crowding at sites of DNA damage, a circular exclusion region is centered at each damaged monomer. The exclusion region is represented by an elastic spring pushing force of radius $r_p$, originating from each damaged monomer. The elastic force applied on any monomer within the exclusion range is thus oriented outwards. In addition to the exclusion region, all cross-links from and to damaged monomers are removed.
+	\subsubsection{The repair stage}	
+	To simulate the affect of repair proteins crowding at sites of DNA damage, a circular exclusion region is centered at each damaged monomer. An elastic pushing force originating from the damaged monomer and having affect radius $r_p$ is applied on any monomers entering the exclusion region. In addition, all cross-links from and to damaged monomers are removed to simulate chromatin de-compaction caused by the activity of chromatin remodlers and repair proteins [REF]. 
 	
-	The polymer will evolve into a new steady spatial configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 95\% of the damaged monomers and centered at their center-of-mass. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI is always centered at the center-of-mass of the monomers known to be damaged.
+	The polymer will evolve into a new steady spatial configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 95\% of the damaged monomers and centered at their CM. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI's position is retrospectively updated to be centered at the CM of the monomers tagged damaged.
 	
 	\subsection{Post repair stage}
-	As damaged monomers are repaired the exclusion region is removed from damaged monomers. Cross-links are reintroduced gradually according to the spatial distance between monomers. The amount of cross-links re-introduces is such that the initial cross-linking percentage $\alpha$ is restored.
+	% cross-linking back to the initial level. this sectio is not yet simulated. 
 	
+	As damaged monomers are repaired, the exclusion region is removed from damaged monomers. Cross-links are reintroduced gradually according to the spatial distance between monomers. The amount of cross-links re-introduces is such that the initial cross-linking percentage $\alpha$ is restored. 
 	
+	\subsection{Parameter Values}
+	% insert a table with parameter values. the only parameter needed to change is the number of damages (or probability of damages) with this the only change, we should see agreement with experimental results. 
+	
+	\bibliographystyle{plain}
+	\bibliography{SimulationFrameworkForChromatineArchitecturePostUVC} % the bibliography.bib file 
 \end{document}
