--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -11,7 +11,7 @@
 	To representing the dynamics of the chromatin in the UV damage micro-environment, simulations are performed in a three-dimensional spherical domain with reflecting boundaries. Our simulation describe the dynamics of DNA and nucleosome signal loss from a circular region of interest (ROI) 15 minutes post UV-C irradiation. The experimental measurements are reported as the maximal z-projected values of GFP signals. Accordingly, simulation result will be obtained by projecting the three-dimensional polymer dynamics onto a two dimensional plane parallel to the x-y plane and passing through the center of the spherical domain. 
 	
 	\subsection{The polymer model}
-	We use a cross-linked Rouse chain of $N$ monomers \cite{doi1988theory} connected by harmonic springs to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a spring constant $2k_BT/b^2$ and a minimal length $L_0>0$. Cross-links are represented by connecting non nearest-neighbor (NN) monomers by a harmonic springs with a spring constant $2k_BT/b^2$ and zero minimal length. The measure of cross-linking is given by the percentage $0\leq \alpha\leq 100$ of non-NN monomers connected out of the total. For each realization of the polymer, cross-links are added between pairs of monomers chosen uniformly at random. The dynamics of the cross-linked polymer is then simulated up to its relaxation time, determined by be the slowest mode of the linear chain \cite{doi1988theory}.
+	We use a cross-linked Rouse chain of $N$ monomers connected by harmonic springs \cite{doi1988theory} to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are assigned a spring constant $2k_BT/b^2$ and a minimal length $L_0>0$. Cross-links are represented by connecting non nearest-neighbor (NN) monomers by a harmonic springs with a spring constant $2k_BT/b^2$ and zero minimal length. The measure of cross-linking is given by the percentage $0\leq \alpha\leq 100$ of non-NN monomers connected out of the total. For each realization of the polymer, cross-links are added between pairs of monomers chosen uniformly at random. The dynamics of the cross-linked polymer is then simulated up to its relaxation time, determined by be the slowest mode of the linear chain \cite{doi1988theory}.
 	
 	\subsection{UV irradiation}
 	At the end of relaxation steps an instantaneous UV beam is shot with its focal point placed at the polymer's center-of-mass (CM). Small fluctuations of monomers are not of interest at the scale of our simulation, therefore the diffusion force acting on the polymer is stopped at this point. Damages caused by UV are restricted to be contained within a fixed two-dimensional circular region of area $A_0$ centered at laser's focal point. Damages to DNA are represented by monomers labeled as damaged. For each UV dose $u$, damages caused by UV are uniformly distributed between the monomers in $A_0$ at the time of beam shot. With increase of UV dose, we increase the probability of damages linearly as $k_tu$, with $k_t$ in units of $bp/msec$. 
